gix-macros/tests/momo/ux/error_if_ineffective.stderr
error: Couldn't apply a single conversion - momo is ineffective here
 --> tests/momo/ux/error_if_ineffective.rs:2:1
  |
2 | #[gix_macros::momo]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `gix_macros::momo` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/momo/ux/error_if_ineffective.rs:3:13
  |
3 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/momo/ux/error_if_ineffective.rs`
