gix-macros/tests/momo/ux/error_if_ineffective.rs
/// If nothing is done, momo should fail.
#[gix_macros::momo]
fn main() {}
